# gitopsapi

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  QUESTIONS-ARCHIVE.md  QUESTIONS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish-chart.yml
charts/gitopsapi/: Chart.yaml  values.yaml
charts/gitopsapi/templates/: deployment.yaml  httproute.yaml  (+1 more)
docs/: README.md  api-first-testing-protocol.md  application-catalog.md  application-cluster-to-be.md  application-deployment-as-is.md  application-deployment-ownership.md  claude-code-setup-guide.md  coding-standards.md  deployment-prerequisites.md  getting-started.md  gitopsapi-0.1.0.tgz  gitopsapi-0.1.1.tgz  gitopsapi-0.1.3.tgz  index.yaml  nexus-image-cache-migration.md  promotion-pipeline.md  provisioning-platform-guide.md  roles-reference.md  security-posture-analysis.md
docs/architecture/: repo-taxonomy.md  v0.1.0-architecture.md  zero-trust-bootstrap.md
docs/deploy/: gitopsapi-values.yaml  gitopsapi.yaml  kustomization.yaml
embedded-agents/telegram-notifier/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
embedded-agents/telegram-notifier/agent/: channel_registry.py  config.py  formatter.py  main.py  models.py  ollama_client.py  reporting.py  telegram_client.py
embedded-agents/telegram-notifier/config/: channel-registry.yaml.example
embedded-agents/telegram-notifier/tests/: test_notifier.py
embedded-agents/template/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
embedded-agents/template/agent/: card.py  logging_config.py  main.py  ollama_client.py
embedded-agents/template/tests/: test_template.py
src/bootstrap/: images.tf  management.tf  network.tf  providers.tf  router.tf  saturn.tfvars.example  variables.tf  venus.tfvars.example
src/storage/: democratic-csi-iscsi-values.yaml  democratic-csi-nfs-values.yaml  talos-iscsi-patch.yaml
tests/: conftest.py  test_auth.py
tests/functional/: test_musings_lifecycle.py
tests/integration/: test_disable_openclaw_apps.py
tests/test_data/: README.md  run-tests.sh
tests/test_models/: test_cluster.py  test_hypervisor.py  test_pipeline.py  test_pr.py
tests/test_routers/: test_application_configs.py  test_applications.py  test_clusters.py  test_hypervisors.py  test_ingress.py  test_instances.py  test_pipelines.py  test_prs.py  test_status.py
tests/test_services/: test_app_config_service.py  test_app_service.py  test_cloudflare_service.py  test_cluster_service.py  test_credential_store.py  test_deploy_key_service.py  test_egg_script_service.py  test_git_service.py  test_github_service.py  test_hypervisor_service.py  test_instance_sops_service.py  test_kubeconfig_service.py  test_pipeline_service.py  test_sops_service.py  test_ssh_orchestration_service.py
(+83 files in other folders)
